# stream-download-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  cliff.toml  clippy.toml  codecov.yml  committed.toml  deny.toml  release-plz.toml  rustfmt.toml  typos.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  committed.yml  nightly.yml  release-plz.yml  test.yml
crates/stream-download/: CHANGELOG.md  Cargo.toml
crates/stream-download-opendal/: CHANGELOG.md  Cargo.toml  README.md
crates/stream-download-opendal/src/: lib.rs
crates/stream-download/src/: async_read.rs  lib.rs  settings.rs
crates/stream-download/src/http/: mod.rs  reqwest_client.rs  reqwest_middleware_client.rs
crates/stream-download/src/process/: command_builder.rs  ffmpeg.rs  mod.rs  yt_dlp.rs
crates/stream-download/src/registry/: matcher.rs  mod.rs
crates/stream-download/src/source/: handle.rs  mod.rs
crates/stream-download/src/storage/: adaptive.rs  bounded.rs  memory.rs  mod.rs  temp.rs
examples/: Cargo.toml  adaptive.rs  audio.rs  basic_http.rs  client_options.rs  custom_client.rs  custom_process.rs  from_stream.rs  infinite_stream.rs  memory_storage.rs  no_tokio_runtime.rs  retry_middleware.rs  s3.rs  stdin.rs  stream.rs  stream_progress.rs  youtube_simple.rs  yt_dlp.rs
examples/examples/: adaptive.rs  basic_http.rs  client_options.rs  custom_client.rs  custom_process.rs  from_stream.rs  infinite_stream.rs  memory_storage.rs  retry_middleware.rs  s3.rs  stdin.rs  stream_progress.rs  video_mpv.rs  youtube_simple.rs  yt_dlp.rs
examples/examples/registry/: http.rs  main.rs  yt_dlp.rs
examples/registry/: file.rs  main.rs  yt_dlp.rs
src/: http.rs  lib.rs  lib_test.rs  open_dal.rs  reqwest.rs  settings.rs  source.rs
src/http/: mod.rs  reqwest_client.rs  reqwest_middleware_client.rs
src/process/: command_builder.rs  ffmpeg.rs  mod.rs  yt_dlp.rs
src/registry/: matcher.rs  mod.rs
src/source/: handle.rs  mod.rs
src/storage/: adaptive.rs  bounded.rs  memory.rs  mod.rs  permanent.rs  temp.rs
src/storage/permanent/: progress.rs
tests/: Cargo.toml  download_test.rs  integration_test.rs  proptest.rs  setup.rs  test.rs
tests/setup/: mod.rs
tests/tests/: integration_test.rs  proptest.rs  registry_test.rs  setup.rs
