[package]
edition = "2021"
name = "stream-download"
version = "0.11.2"
rust-version = "1.75.0"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aschey/stream-download-rs"
description = "A library for streaming content to a local file-backed cache"
categories = ["multimedia", "asynchronous", "caching"]
keywords = ["audio", "stream", "media"]
include = ["/src", "/examples", "/tests"]

[dependencies]
bytes = "1.6"
educe = "0.6"
futures = "0.3"
mediatype = { version = "0.19", optional = true }
opendal = { version = ">=0.47,<0.51", optional = true }
parking_lot = "0.12.1"
pin-project-lite = { version = "0.2.9", optional = true }
rangemap = "1"
reqwest = { version = "0.12.2", features = [
  "stream",
], default-features = false, optional = true }
reqwest-middleware = { version = ">=0.3,<0.5", optional = true }
tap = "1.0.1"
tempfile = { version = "3.1", optional = true }
thiserror = "2.0.1"
tokio = { version = "1.27", features = ["sync", "macros", "rt", "time"] }
tokio-util = "0.7.1"
tracing = "0.1.36"

[features]
default = ["reqwest", "temp-storage"]
http = ["dep:mediatype"]
reqwest = ["http", "dep:reqwest"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls = ["reqwest", "reqwest/rustls-tls"]
reqwest-middleware = ["reqwest", "dep:reqwest-middleware"]
temp-storage = ["dep:tempfile"]
open-dal = ["dep:opendal", "dep:pin-project-lite", "tokio-util/compat"]
async-read = ["tokio-util/io"]
process = ["tokio/process", "async-read", "dep:tempfile"]

[dev-dependencies]
rodio = { version = "0.20.1", default-features = false, features = [
  "symphonia-all",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["fs"] }
tower = { version = "0.5.0", features = ["make"] }
ctor = "0.2.7"
rstest = "0.23.0"
proptest = "1.4.0"
axum = "0.7.5"
testcontainers-modules = { version = "0.11.1", features = ["localstack"] }
opendal = { version = "0.50.0", features = ["services-s3", "services-http"] }
aws-sdk-s3 = "1.29.0"
reqwest-retry = "0.7.0"
youtube_dl = { version = "0.10.0", features = ["tokio"] }

[[example]]
name = "basic_http"
required-features = ["reqwest"]
doc-scrape-examples = true

[[example]]
name = "client_options"
required-features = ["reqwest", "temp-storage"]
doc-scrape-examples = true

[[example]]
name = "custom_client"
required-features = ["reqwest", "temp-storage"]
doc-scrape-examples = true

[[example]]
name = "from_stream"
required-features = ["reqwest", "temp-storage"]
doc-scrape-examples = true

[[example]]
name = "infinite_stream"
required-features = ["reqwest-rustls"]
doc-scrape-examples = true

[[example]]
name = "adaptive"
required-features = ["reqwest-rustls", "temp-storage"]
doc-scrape-examples = true

[[example]]
name = "memory_storage"
required-features = ["reqwest"]
doc-scrape-examples = true

[[example]]
name = "retry_middleware"
required-features = ["reqwest-middleware"]
doc-scrape-examples = true

[[example]]
name = "s3"
required-features = ["open-dal"]
doc-scrape-examples = true

[[example]]
name = "stdin"
required-features = ["async-read"]
doc-scrape-examples = true

[[example]]
name = "custom_process"
required-features = ["process"]
doc-scrape-examples = true

[[example]]
name = "youtube_simple"
required-features = ["process"]
doc-scrape-examples = true

[[example]]
name = "yt_dlp"
required-features = ["process"]
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
