
[workspace]
members = ["./crates/*", "examples", "tests"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aschey/stream-download-rs"
homepage = "https://github.com/aschey/stream-download-rs"
include = ["/src", "/examples", "/tests"]
categories = ["multimedia", "asynchronous", "caching"]
keywords = ["audio", "stream", "media"]

[workspace.dependencies]
async-trait = "0.1.68"
bytes = "1.10"
educe = "0.6"
futures-util = "0.3"
mediatype = "0.19"
opendal = "0.53"
parking_lot = "0.12.1"
pin-project-lite = "0.2.14"
rangemap = "1"
regex = "1.10.6"
reqwest = { version = "0.12.2", default-features = false }
reqwest-middleware = "0.4"
tempfile = "3.1"
thiserror = "2.0.3"
tokio = "1.40"
tokio-util = "0.7.10"
tracing = "0.1.40"
url = "2.5"

# dependencies for examples and tests
libmpv2 = "4.1.0"
reqwest-retry = "0.7.0"
rodio = { version = "0.20.1", default-features = false }
tracing-subscriber = "0.3.18"
tower = "0.5.2"
youtube_dl = "0.10.0"
rstest = "0.25.0"
testcontainers-modules = "0.12.0"
aws-sdk-s3 = "1.82.0"
axum = "0.8.3"
proptest = "1.6.0"
tower-http = "0.6.2"
ctor = "0.4.1"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
