[package]
name = "stream-download-opendal"
version = "0.5.5"
readme = "README.md"
description = "OpenDAL adapter for stream-download"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
stream-download = { version = "0.22.7", path = "../stream-download", default-features = false }
opendal = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
futures-util = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
opendal = { workspace = true, features = ["services-s3"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
